    prematurely exiting the process scan when tripping over zombies.
  * Write to temporary cache files and then rename after validation
    to avoid the cache containing broken aborted files (LP: #471076)
  * Skip nonexistent directories in cron cleanup code to avoid vomit
    in cron log on fresh installs that lack those dirs (LP: #559115)
  * Mangle recipe versions to match backports policy (LP: #1095103)
  * Make buildd-slave-example.conf match the current config template.

 -- Adam Conrad <adconrad@ubuntu.com>  Mon, 29 Apr 2013 15:47:20 -0600

launchpad-buildd (114) hardy; urgency=low

  * Don't use the uname-2.6 hack when building on quantal and newer.
  * Display the linux32-faked kernel version before calling sbuild.

 -- Adam Conrad <adconrad@ubuntu.com>  Tue, 24 Apr 2012 07:44:18 -0600

launchpad-buildd (113) hardy; urgency=low

  * Shut up umount-chroot's verbose output, it served its purpose.
  * Yank out sbuild's dependency removal code, as we never once
    checked the return from this anyway, so it's just wasted time.
  * Stop writing to avg-space and avg-time, which we don't use.

 -- Adam Conrad <adconrad@ubuntu.com>  Thu, 22 Mar 2012 04:01:48 -0600

launchpad-buildd (112) hardy; urgency=low

  [ Jelmer Vernooij ]
  * Prevent slave from blowing up when it is aborted before a job has
    started. LP: #497772

  [ Adam Conrad ]
  * Update sbuild-package and update-debian-chroot to use linux32/64
    universally, and to pass --uname-2.6 when available, so we can
    use 3.x.x kernels to build older releases on the buildds.
  * Fix sbuild-package to report the correct number of cores/jobs.
  * Make sure /usr/bin/check-implicit-pointer-functions is called for
    all 64-bit builds on lucid and above, this logic got broken.

 -- Adam Conrad <adconrad@ubuntu.com>  Wed, 25 Jan 2012 11:27:55 -0700

launchpad-buildd (111) hardy; urgency=low

  * Add preppath to buildd-slave-test.conf, to unbreak the LP test suite.
