@@ -1,36 +1,0 @@
-# Copyright 2009 Canonical Ltd.  This software is licensed under the
-# GNU Affero General Public License version 3 (see the file LICENSE).
-
-# Example buildd slave configuration
-# This should be refactored into a nice central configuration format when
-# such a beast becomes available
-
-[slave]
-architecturetag = i386
-filecache = /home/buildd/filecache
-bindhost = localhost
-bindport = 8221
-ntphost = localhost
-
-[allmanagers]
-preppath = /usr/share/launchpad-buildd/slavebin/slave-prep
-unpackpath = /usr/share/launchpad-buildd/slavebin/unpack-chroot
-cleanpath = /usr/share/launchpad-buildd/slavebin/remove-build
-mountpath = /usr/share/launchpad-buildd/slavebin/mount-chroot
-umountpath = /usr/share/launchpad-buildd/slavebin/umount-chroot
-
-[debianmanager]
-updatepath = /usr/share/launchpad-buildd/slavebin/update-debian-chroot
-processscanpath = /usr/share/launchpad-buildd/slavebin/scan-for-processes
-sourcespath = /usr/share/launchpad-buildd/slavebin/override-sources-list
-
-[binarypackagemanager]
-sbuildpath = /usr/share/launchpad-buildd/slavebin/sbuild-package
-sbuildargs = --nolog --batch --archive=ubuntu
-
-[sourcepackagerecipemanager]
-buildrecipepath = /usr/share/launchpad-buildd/slavebin/buildrecipe
-
-[translationtemplatesmanager]
-generatepath = /usr/share/launchpad-buildd/slavebin/generate-translation-templates
-resultarchive = translation-templates.tar.gz
