@@ -6,8 +6,10 @@ launchpad-buildd (115) UNRELEASED; urgency=low
     to avoid the cache containing broken aborted files (LP: #471076)
   * Skip nonexistent directories in cron cleanup code to avoid vomit
     in cron log on fresh installs that lack those dirs (LP: #559115)
+  * Build buildd-slave-example.conf from template-buildd-slave.conf
+    using buildd-genconfig at package build time so it's not stale.
+  * Strip trailing whitespace in buildd-genconfig because I'm anal.
   * Mangle recipe versions to match backports policy (LP: #1095103)
-  * Make buildd-slave-example.conf match the current config template.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Mon, 29 Apr 2013 15:47:20 -0600
 
